[android] Failed to initialize android.hardware.Camera classes
I'm getting the following crash on nativeInit with the 1.17.1 build:
../sys/androidmedia/gst-android-hardware-camera.c:1763:_init_classes Failed to initialize android.hardware.Camera classes: Failed to get static field ID EFFECT_EMBOSS (Ljava/lang/String;): java.lang.NoSuchFieldError: no "Ljava/lang/String;" field "EFFECT_EMBOSS" in class "Landroid/hardware/Camera$Parameters;" or its superclasses
java.lang.NoSuchFieldError: no "Ljava/lang/String;" field "EFFECT_EMBOSS" in class "Landroid/hardware/Camera$Parameters;" or its superclasses
I don't actually use the camera in my app, but since it crashes on nativeInit I can't do anything about it (not that I know of)